--- a/index.html
+++ b/index.html
@@ -5,5 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>HTML + CSS</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+          href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+          rel="stylesheet"
+        />
+      </head>
+      <body>
+        <div class="weather-app">
+          <header>
+            <form id="search-form">
+              <input
+                type="search"
+                placeholder="Enter a city.."
+                required
+                id="search-form-input"
+              />
+              <input type="submit" value="search" id="search-form-button" />
+            </form>
+          </header>
+          <main>
+            <div class="weather-app-data">
+              <div>
+                <h1 class="city" id="city">Pretoria</h1>
+                <p class="weather-app-details">
+                  Sunday 21:30, Thunderstorm
+                  <br />
+                  Humidity <strong> 90%</strong>, Wind
+                  <strong>9.45 km/h</strong>
+                </p>
+              </div>
+              <div class="weather-app-temperature-container">
+                <div class="weather-app-icon">⛈️</div>
+                <div class="weather-app-temperature">5</div>
+                <div class="weather-app-unit">°C</div>
+              </div>
+            </div>
+          </main>
+          <footer>
+            <p>
+              This project was coded by
+              <a href="#" target="_blank">Nqobile Kumalo</a> and is
+              <a
+                href="https://github.com/NqobeeKay/weather_app"
+                target="_blank"
+              >
+                open-sourced on GitHub</a
+              >
+              and
+              <a href="https://funny-muffin-19a05e.netlify.app/" target="_blank"
+                >hosted on Netlify</a
+              >
+            </p>
+          </footer>
+        </div>
+      </body>
+    </html>
+  </body>
 </html>
