--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         />
       </head>
       <body>
+        <link rel="stylesheet" href="style.css" />
         <div class="weather-app">
           <header>
             <form id="search-form">
