--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
                 placeholder="Enter a city.."
                 required
                 id="search-form-input"
+                class="search-form-input"
               />
-              <input type="submit" value="search" id="search-form-button" />
+              <input
+                type="submit"
+                value="search"
+                id="search-form-button"
+                class="search-form-button"
+              />
             </form>
           </header>
           <main>
