--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
           href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
           rel="stylesheet"
         />
+        <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
       </head>
+      <link rel="stylesheet" href="style.css" />
       <body>
-        <link rel="stylesheet" href="style.css" />
         <div class="weather-app">
           <header>
             <form id="search-form">
