--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             </p>
           </footer>
         </div>
+        <script src="index.js"></script>
       </body>
     </html>
   </body>
