--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <main>
             <div class="weather-app-data">
               <div>
-                <h1 class="city" id="city"></h1>
+                <h1 class="city" id="city">Paris</h1>
                 <p class="weather-app-details">
                   Sunday 21:30, Thunderstorm
                   <br />
@@ -54,7 +54,7 @@
               </div>
               <div class="weather-app-temperature-container">
                 <div class="weather-app-icon">⛈️</div>
-                <div class="weather-app-temperature" id="temperature"></div>
+                <div class="weather-app-temperature" id="temperature">17</div>
                 <div class="weather-app-unit">°C</div>
               </div>
             </div>
