--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
           <main>
             <div class="weather-app-data">
               <div>
-                <h1 class="city" id="city">Paris</h1>
+                <h1 class="city" id="city"></h1>
                 <p class="weather-app-details">
-                  Sunday 21:30, Thunderstorm
+                  <span id="time"></span>,<span id="description"></span>
                   <br />
-                  Humidity <strong> 90%</strong>, Wind
-                  <strong>9.45 km/h</strong>
+                  Humidity <strong id="humidity"></strong>, Wind
+                  <strong id="wind-speed"></strong>
                 </p>
               </div>
               <div class="weather-app-temperature-container">
                 <div class="weather-app-icon">⛈️</div>
-                <div class="weather-app-temperature" id="temperature">17</div>
+                <div class="weather-app-temperature" id="temperature"></div>
                 <div class="weather-app-unit">°C</div>
               </div>
             </div>
