--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
               This project was coded by
               <a href="#" target="_blank">Nqobile Kumalo</a> and is
               <a
-                href="https://github.com/NqobeeKay/weather_app"
+                href="https://github.com/NqobeeKay/My_weather_app"
                 target="_blank"
               >
                 open-sourced on GitHub</a
               >
               and
-              <a href="https://funny-muffin-19a05e.netlify.app/" target="_blank"
+              <a
+                href="https://fabulous-dango-2d25cb.netlify.app/"
+                target="_blank"
                 >hosted on Netlify</a
               >
             </p>
